# er-app

./: LICENSE  generate_test_data.js  groupware-1000-tables.csv  groupware-1000-tables.json  index.html  package-lock.json  package.json  performance_test_1000.er
scripts/: generate-test-data-csv.mjs  generate-test-data.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/db/: mod.rs  mysql.rs  oracle.rs  postgres.rs
src/components/: CategoryEditModal.tsx  CategoryNode.tsx  DbConnectionModal.tsx  DiagramCanvas.tsx  EREdge.tsx  ExportOptionsModal.tsx  ForeignKeyModal.tsx  HistoryView.tsx  ImportModal.tsx  LiveDbSearch.tsx  MetadataEditor.tsx  ResultsTable.tsx  SchemaChangeModal.tsx  SettingsModal.tsx  Sidebar.tsx  SqlEditor.tsx  TableNode.tsx  WelcomeScreen.tsx
src/hooks/: useErData.tsx
src/types/: er.ts
src/utils/: ddlGenerator.ts
src/workers/: layoutWorker.ts
