[package]
name = "er-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "er_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "chrono", "uuid"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
oracle = "0.6"
csv = "1.3"
flate2 = "1.0"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
async-trait = "0.1"

